# mottling

./: calc_mottling.py  fft2d.py  main.py  main_window.py  main_window.ui  mottling.py  plot_mi.py  pyproject.toml
Imagens/: fibras.tif  flat-blue-50%-rgb-noise.tif  random.tif
Imagens/Testar/: flat-blue.tif
mottling/: __init__.py
