[project]
name = "mottling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.10.2",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "qt6-applications>=6.5.0.2.3",
]
